# aideo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bash.exe.stackdump  build.gradle.kts  gradle.properties  settings.gradle.kts  요구사항.md
.claude/agents/: android-code-reviewer.md  test-code-writer.md
.github/workflows/: aaa.yml  cd_main_workflow.yml  test.yml  update_docs_workflows.yml
ai_pack/: build.gradle.kts
ai_speech/: build.gradle.kts
ai_speech_base/: build.gradle.kts
ai_speech_sensevoice/: build.gradle.kts
ai_speech_whisper/: build.gradle.kts
ai_translation/: build.gradle.kts
app/: build.gradle.kts  device_targeting_config.xml  google-services.json  proguard-rules.pro
build-logic/convention/: build.gradle.kts
data/: build.gradle.kts  proguard-rules.pro
design/: build.gradle.kts
docs/: debug-build-setup.md  m2m100_jni_analysis.md  plan-pipeline-memory-optimization.md
docs/refactoring/: m2m100_load_partial_reuse_plan.md  m2m100_translator_refactoring.md
documentation/review/: SOLID_원칙_적용한_추론_클래스_설계.md  비디오_자막_End-to-End_Pipeline_구축.md  클래스_설계_목적.md
features/core/: build.gradle.kts
features/core/src/main/cpp/: CMakeLists.txt  encoder_decoder_with_past.cpp  encoder_decoder_with_past.h  language_token_map.cpp  language_token_map.h  logging.h  m2m100_jni.cpp  m2m100_translator.cpp  m2m100_translator.h  onnxruntime_inference.cpp  onnxruntime_inference.h  path_utils.h  t5_inference.cpp  t5_inference.h  t5_jni.cpp  token_selector.cpp  token_selector.h  tokenizer.cpp  tokenizer.h  translator.cpp  translator.h
features/gallery/: build.gradle.kts
gradle/: libs.versions.toml
htp_v69_sm8450/: build.gradle.kts
htp_v69_sm8475/: build.gradle.kts
htp_v73_qcs9100/: build.gradle.kts
htp_v73_sm8550/: build.gradle.kts
htp_v75/: build.gradle.kts
htp_v79/: build.gradle.kts
htp_v81/: build.gradle.kts
whisper_lib/: build.gradle.kts
(+315 files in other folders)
